NoJira - console.log and style cleanup

--- a/styles/stories.scss
+++ b/styles/stories.scss
@@ -261,7 +261,7 @@
 }
 
 .post-ambassador {
-  align-content: start;
+  align-content: flex-start;
   display: flex;
   font-weight: normal;
   justify-content: flex-start;
