--- a/styles/report.scss
+++ b/styles/report.scss
@@ -220,7 +220,7 @@ input::placeholder {
 
     &label-mobile {
       display: block;
-      align-self: start;
+      align-self: flex-start;
       margin-left: 2%;
     }
 
