--- a/styles/styles.css
+++ b/styles/styles.css
@@ -3082,7 +3082,7 @@ h1.heading-text.profile-heading {
 }
 
 .post-ambassador {
-  align-content: start;
+  align-content: flex-start;
   display: flex;
   font-weight: normal;
   justify-content: flex-start;
@@ -4216,7 +4216,7 @@ input::placeholder {
   }
   .report-label-mobile {
     display: block;
-    align-self: start;
+    align-self: flex-start;
     margin-left: 2%;
   }
   .report-optional-text {
@@ -4584,7 +4584,7 @@ input::placeholder {
 }
 
 .post-ambassador {
-  align-content: start;
+  align-content: flex-start;
   display: flex;
   font-weight: normal;
   justify-content: flex-start;
