--- a/styles/volunteer.scss
+++ b/styles/volunteer.scss
@@ -100,6 +100,26 @@
 
   .narrow-column {
     width: 55px;
+
+    .date-input-container {
+      width: 100%;
+      height: 100%;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      position: relative;
+    }
+
+    .date-dropdown {
+      border: none;
+      cursor: pointer;
+      font-size: .65rem;
+      font-weight: bold;
+      margin: auto;
+      outline: none;
+      padding: 0;
+      text-align: center;
+    }
   }
 
   img {
@@ -446,6 +466,29 @@ textarea {
     a {
       font-size: .7rem;
 
+    }
+
+    .narrow-column {
+
+      .date-input-container {
+        width: 100%;
+        height: 100%;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        position: relative;
+      }
+
+      .date-dropdown {
+        border: none;
+        cursor: pointer;
+        font-size: .65rem;
+        font-weight: bold;
+        margin: auto;
+        outline: none;
+        padding: 0;
+        text-align: center;
+      }
     }
   }
 
