Adding current changes to adding an organization to a profile and adding missed commit for lbs/kg to RELEASE-3

--- a/styles/edit-profile.scss
+++ b/styles/edit-profile.scss
@@ -70,7 +70,7 @@
   width: 33%;
 }
 
-.edit-profile-organization-select {
+.edit-profile-organization-select, .edit-profile-new-organization-input {
   background-color: $white;
   border: 1px solid $med-gray;
   border-radius: 5px;
@@ -94,7 +94,8 @@
 }
 
 
-.edit-profile-submit-button {
+.edit-profile-submit-button, .edit-profile-add-organization-button {
+  border-radius: 0.5rem;
   display: block;
   margin-top: 20px;
   width: 200px;
