--- a/styles/styles.css
+++ b/styles/styles.css
@@ -592,7 +592,7 @@ input:checked + .custom-checkbox::after {
   width: 33%;
 }
 
-.edit-profile-organization-select {
+.edit-profile-organization-select, .edit-profile-new-organization-input {
   background-color: #fff;
   border: 1px solid #ccc;
   border-radius: 5px;
@@ -615,7 +615,8 @@ input:checked + .custom-checkbox::after {
   width: 90%;
 }
 
-.edit-profile-submit-button {
+.edit-profile-submit-button, .edit-profile-add-organization-button {
+  border-radius: 0.5rem;
   display: block;
   margin-top: 20px;
   width: 200px;
