--- a/styles/stories.scss
+++ b/styles/stories.scss
@@ -358,6 +358,18 @@
     width: 600px;
   }
 
+  /* Hide input arrows - For Chrome, Safari, Edge, Opera */
+  .no-increment-decrement::-webkit-outer-spin-button,
+  .no-increment-decrement::-webkit-inner-spin-button {
+    -webkit-appearance: none;
+    margin: 0;
+  }
+
+  /* Hide input arrows - For Firefox */
+  .no-increment-decrement[type=number] {
+    -moz-appearance: textfield;
+  }
+
   textarea {
     cursor: text;
     font-size: .9rem;
@@ -365,6 +377,44 @@
     line-height: 1.5;
     padding: 5px;
     width: 600px;
+  }
+}
+
+.litter-container {
+  margin-bottom: 9px;
+
+  .radio-buttons {
+    display: flex;
+    justify-content: flex-start;
+
+    label {
+      align-items: center;
+      display: flex;
+      margin-right: 12px;
+
+      input[type="radio"] {
+        appearance: none;
+        border: 2px solid $litterpic-green;
+        border-radius: 50%;
+        cursor: pointer;
+        height: 20px;
+        margin-right: 6px;
+        outline: none;
+        width: 20px;
+
+        &:checked {
+          background-color: $litterpic-green;
+        }
+      }
+
+      &:last-child {
+        margin-right: 0;
+      }
+
+      span {
+        font-size: 14px;
+      }
+    }
   }
 }
 
@@ -574,6 +624,9 @@
     }
 
     input {
+      border-style: inset;
+      border-width: 1px;
+      border-color: initial;
       width: 80vw;
     }
 
@@ -585,6 +638,44 @@
 
   .create-post-limit-message {
     font-size: .6rem;
+  }
+
+  .litter-container {
+    margin-bottom: 9px;
+
+    .radio-buttons {
+      display: flex;
+      justify-content: flex-start;
+
+      label {
+        align-items: center;
+        display: flex;
+        margin-right: 12px;
+
+        input[type="radio"] {
+          appearance: none;
+          border: 2px solid $litterpic-green;
+          border-radius: 50%;
+          cursor: pointer;
+          height: 20px;
+          margin-right: 6px;
+          outline: none;
+          width: 20px;
+
+          &:checked {
+            background-color: $litterpic-green;
+          }
+        }
+
+        &:last-child {
+          margin-right: 0;
+        }
+
+        span {
+          font-size: 14px;
+        }
+      }
+    }
   }
 }
 
@@ -649,4 +740,56 @@
     width: 460px;
   }
 
+  //make sure it's in alphabetical order
+
+  .litter-container {
+    align-items: flex-start;
+    display: flex;
+    flex-direction: column;
+
+    input {
+      border: 1px solid #ccc;
+      border-radius: 5px;
+      margin-bottom: 9px;
+      padding: 10px;
+      width: 100%;
+    }
+
+    .radio-buttons {
+      display: flex;
+      justify-content: center;
+      flex-wrap: wrap;
+      margin-bottom: 9px;
+
+
+      label {
+        align-items: center;
+        display: flex;
+        margin-right: 12px;
+
+        input[type="radio"] {
+          appearance: none;
+          border: 2px solid $litterpic-green;
+          border-radius: 50%;
+          cursor: pointer;
+          height: 20px;
+          margin-right: 6px;
+          outline: none;
+          width: 20px;
+
+          &:checked {
+            background-color: $litterpic-green;
+          }
+        }
+
+        &:last-child {
+          margin-right: 0;
+        }
+
+        span {
+          font-size: 14px;
+        }
+      }
+    }
+  }
 }
