--- a/styles/stories.scss
+++ b/styles/stories.scss
@@ -25,6 +25,43 @@
   margin-bottom: 3rem;
 }
 
+.search-and-filter-image {
+  border-radius: .5rem;
+  height: 350px;
+  object-fit: fill;
+  width: 100%;
+}
+
+.search-and-filter-input-button-container {
+  align-items: start;
+  display: flex;
+  margin-bottom: 2rem;
+  margin-left: 1rem;
+  justify-content: flex-start;
+
+  .show-all-posts-button,
+  .show-my-posts-button {
+    border-radius: .5rem;
+    margin-left: 1rem;
+  }
+
+  .post-search-input {
+    border-radius: .5rem;
+    width: 500px;
+  }
+}
+
+.search-and-filter-button-container {
+  align-items: center;
+  display: flex;
+}
+
+.post-search-input {
+  margin-left: auto;
+  display: flex;
+  align-items: center;
+}
+
 .post-grid {
   display: flex;
   gap: .5rem;
@@ -571,6 +608,31 @@
       font-size: .5rem;
       margin-top: 4px;
     }
+  }
+
+  .search-and-filter-image {
+    height: 150px;
+  }
+
+  .search-and-filter-input-button-container {
+    margin-left: .5rem;
+
+    .show-all-posts-button,
+    .show-my-posts-button {
+      font-size: 19.2px;
+      height: 2rem;
+      margin-left: .25rem;
+      width: 100px;
+    }
+
+    .post-search-input {
+      width: 150px;
+    }
+  }
+
+
+  .post-search-input {
+    font-size: 19.2;
   }
 
 
