--- a/styles/styles.css
+++ b/styles/styles.css
@@ -2858,6 +2858,41 @@ h1.heading-text.profile-heading {
   margin-bottom: 3rem;
 }
 
+.search-and-filter-image {
+  border-radius: 0.5rem;
+  height: 350px;
+  object-fit: fill;
+  width: 100%;
+}
+
+.search-and-filter-input-button-container {
+  align-items: start;
+  display: flex;
+  margin-bottom: 2rem;
+  margin-left: 1rem;
+  justify-content: flex-start;
+}
+.search-and-filter-input-button-container .show-all-posts-button,
+.search-and-filter-input-button-container .show-my-posts-button {
+  border-radius: 0.5rem;
+  margin-left: 1rem;
+}
+.search-and-filter-input-button-container .post-search-input {
+  border-radius: 0.5rem;
+  width: 500px;
+}
+
+.search-and-filter-button-container {
+  align-items: center;
+  display: flex;
+}
+
+.post-search-input {
+  margin-left: auto;
+  display: flex;
+  align-items: center;
+}
+
 .post-grid {
   display: flex;
   gap: 0.5rem;
@@ -2971,6 +3006,7 @@ h1.heading-text.profile-heading {
   height: 60px;
   margin-left: auto;
   margin-right: auto;
+  padding-left: 2px;
   width: 90%;
 }
 
@@ -3355,6 +3391,25 @@ h1.heading-text.profile-heading {
   .post-ambassador-text {
     font-size: 0.5rem;
     margin-top: 4px;
+  }
+  .search-and-filter-image {
+    height: 150px;
+  }
+  .search-and-filter-input-button-container {
+    margin-left: 0.5rem;
+  }
+  .search-and-filter-input-button-container .show-all-posts-button,
+  .search-and-filter-input-button-container .show-my-posts-button {
+    font-size: 19.2px;
+    height: 2rem;
+    margin-left: 0.25rem;
+    width: 100px;
+  }
+  .search-and-filter-input-button-container .post-search-input {
+    width: 150px;
+  }
+  .post-search-input {
+    font-size: 19.2;
   }
   .post {
     border: 0.01rem solid #015e41;
@@ -4514,6 +4569,41 @@ input::placeholder {
   margin-bottom: 3rem;
 }
 
+.search-and-filter-image {
+  border-radius: 0.5rem;
+  height: 350px;
+  object-fit: fill;
+  width: 100%;
+}
+
+.search-and-filter-input-button-container {
+  align-items: start;
+  display: flex;
+  margin-bottom: 2rem;
+  margin-left: 1rem;
+  justify-content: flex-start;
+}
+.search-and-filter-input-button-container .show-all-posts-button,
+.search-and-filter-input-button-container .show-my-posts-button {
+  border-radius: 0.5rem;
+  margin-left: 1rem;
+}
+.search-and-filter-input-button-container .post-search-input {
+  border-radius: 0.5rem;
+  width: 500px;
+}
+
+.search-and-filter-button-container {
+  align-items: center;
+  display: flex;
+}
+
+.post-search-input {
+  margin-left: auto;
+  display: flex;
+  align-items: center;
+}
+
 .post-grid {
   display: flex;
   gap: 0.5rem;
@@ -4627,6 +4717,7 @@ input::placeholder {
   height: 60px;
   margin-left: auto;
   margin-right: auto;
+  padding-left: 2px;
   width: 90%;
 }
 
@@ -5011,6 +5102,25 @@ input::placeholder {
   .post-ambassador-text {
     font-size: 0.5rem;
     margin-top: 4px;
+  }
+  .search-and-filter-image {
+    height: 150px;
+  }
+  .search-and-filter-input-button-container {
+    margin-left: 0.5rem;
+  }
+  .search-and-filter-input-button-container .show-all-posts-button,
+  .search-and-filter-input-button-container .show-my-posts-button {
+    font-size: 19.2px;
+    height: 2rem;
+    margin-left: 0.25rem;
+    width: 100px;
+  }
+  .search-and-filter-input-button-container .post-search-input {
+    width: 150px;
+  }
+  .post-search-input {
+    font-size: 19.2;
   }
   .post {
     border: 0.01rem solid #015e41;
