--- a/styles/stories.scss
+++ b/styles/stories.scss
@@ -361,8 +361,10 @@
   font-family: inherit;
   font-size: 1rem;
   height: auto;
+  overflow-wrap: anywhere;
   padding: 1rem 2rem;
   width: auto;
+  word-break: break-word;
 }
 
 .recent-location-select {
@@ -621,7 +623,6 @@
     .show-all-posts-button,
     .show-my-posts-button,
     .post-search-button {
-      color: red;
       font-size: 19.2px;
       height: 2rem;
       margin-left: .25rem;
