--- a/styles/styles.css
+++ b/styles/styles.css
@@ -2955,6 +2955,8 @@ h1.heading-text.profile-heading {
 
 .user-name {
   flex-grow: 1;
+  text-decoration: none;
+  cursor: pointer;
 }
 
 .like-date {
@@ -4670,6 +4672,8 @@ input::placeholder {
 
 .user-name {
   flex-grow: 1;
+  text-decoration: none;
+  cursor: pointer;
 }
 
 .like-date {
