LITTERPIC-181 - Added ability for a user (logged in or anonymous) to report a post

--- a/styles/stories.scss
+++ b/styles/stories.scss
@@ -33,7 +33,7 @@
 }
 
 .search-and-filter-input-button-container {
-  align-items: start;
+  align-items: flex-start;
   display: flex;
   margin-bottom: 2rem;
   margin-left: 1rem;
