--- a/styles/styles.css
+++ b/styles/styles.css
@@ -2866,7 +2866,7 @@ h1.heading-text.profile-heading {
 }
 
 .search-and-filter-input-button-container {
-  align-items: start;
+  align-items: flex-start;
   display: flex;
   margin-bottom: 2rem;
   margin-left: 1rem;
@@ -4583,7 +4583,7 @@ input::placeholder {
 }
 
 .search-and-filter-input-button-container {
-  align-items: start;
+  align-items: flex-start;
   display: flex;
   margin-bottom: 2rem;
   margin-left: 1rem;
