--- a/styles/stories.scss
+++ b/styles/stories.scss
@@ -617,10 +617,12 @@
 
   .search-and-filter-image {
     height: 150px;
+    width: 100%;
   }
 
   .search-and-filter-input-button-container {
-    margin-left: .5rem;
+    margin-left: .75rem;
+    margin-right: .75rem;
 
     .show-all-posts-button,
     .show-my-posts-button,
@@ -628,11 +630,12 @@
       font-size: 19.2px;
       height: 2rem;
       margin-left: .25rem;
+      margin-right: .25rem;
       width: 100px;
     }
 
     .post-search-input {
-      width: 150px;
+      width: 135px;
     }
   }
 
