--- a/styles/styles.css
+++ b/styles/styles.css
@@ -3399,9 +3399,11 @@ h1.heading-text.profile-heading {
   }
   .search-and-filter-image {
     height: 150px;
+    width: 100%;
   }
   .search-and-filter-input-button-container {
-    margin-left: 0.5rem;
+    margin-left: 0.75rem;
+    margin-right: 0.75rem;
   }
   .search-and-filter-input-button-container .show-all-posts-button,
   .search-and-filter-input-button-container .show-my-posts-button,
@@ -3409,10 +3411,11 @@ h1.heading-text.profile-heading {
     font-size: 19.2px;
     height: 2rem;
     margin-left: 0.25rem;
+    margin-right: 0.25rem;
     width: 100px;
   }
   .search-and-filter-input-button-container .post-search-input {
-    width: 150px;
+    width: 135px;
   }
   .post-search-input {
     font-size: 19.2px;
@@ -5116,9 +5119,11 @@ input::placeholder {
   }
   .search-and-filter-image {
     height: 150px;
+    width: 100%;
   }
   .search-and-filter-input-button-container {
-    margin-left: 0.5rem;
+    margin-left: 0.75rem;
+    margin-right: 0.75rem;
   }
   .search-and-filter-input-button-container .show-all-posts-button,
   .search-and-filter-input-button-container .show-my-posts-button,
@@ -5126,10 +5131,11 @@ input::placeholder {
     font-size: 19.2px;
     height: 2rem;
     margin-left: 0.25rem;
+    margin-right: 0.25rem;
     width: 100px;
   }
   .search-and-filter-input-button-container .post-search-input {
-    width: 150px;
+    width: 135px;
   }
   .post-search-input {
     font-size: 19.2px;
